<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="ButtonClickListener"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btDelete"
        android:layout_width="89dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_delete"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt9"
        app:layout_constraintEnd_toStartOf="@+id/btDivision"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btPercent"
        app:layout_constraintTop_toBottomOf="@+id/tvSub" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_Clear"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt7"
        app:layout_constraintEnd_toStartOf="@+id/btPercent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:rippleColor="#A55151" />

    <Button
        android:id="@+id/btDivision"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_division"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btMulti"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btDelete"
        app:layout_constraintTop_toBottomOf="@+id/tvSub" />

    <Button
        android:id="@+id/btPercent"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_percent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt8"
        app:layout_constraintEnd_toStartOf="@+id/btDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btClear"
        app:layout_constraintTop_toBottomOf="@+id/tvSub" />


    <Button
        android:id="@+id/btMinus"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_minus"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btPlus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt6"
        app:layout_constraintTop_toBottomOf="@+id/btMulti" />

    <Button
        android:id="@+id/btPlus"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btEqual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt3"
        app:layout_constraintTop_toBottomOf="@+id/btMinus" />

    <Button
        android:id="@+id/bt00"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_00"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btperiod"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/bt0"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt0"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/bt_0"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt00"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt1"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/bt1"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt0"
        app:layout_constraintEnd_toStartOf="@+id/bt2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt4"
        />

    <Button
        android:id="@+id/bt2"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt00"
        app:layout_constraintEnd_toStartOf="@+id/bt3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt1"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="91dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_3"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btperiod"
        app:layout_constraintEnd_toStartOf="@+id/btPlus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt2"
        app:layout_constraintTop_toBottomOf="@+id/bt6" />

    <Button
        android:id="@+id/bt4"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_4"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt1"
        app:layout_constraintEnd_toStartOf="@+id/bt5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt7" />

    <Button
        android:id="@+id/bt5"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_5"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt2"
        app:layout_constraintEnd_toStartOf="@+id/bt6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt4"
        app:layout_constraintTop_toBottomOf="@+id/bt8" />

    <Button
        android:id="@+id/bt6"
        android:layout_width="94dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_6"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt3"
        app:layout_constraintEnd_toStartOf="@+id/btMinus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt5"
        app:layout_constraintTop_toBottomOf="@+id/bt9" />

    <Button
        android:id="@+id/bt7"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_7"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt4"
        app:layout_constraintEnd_toStartOf="@+id/bt8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btClear" />

    <Button
        android:id="@+id/bt8"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_8"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt5"
        app:layout_constraintEnd_toStartOf="@+id/bt9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt7"
        app:layout_constraintTop_toBottomOf="@+id/btPercent" />

    <Button
        android:id="@+id/bt9"
        android:layout_width="89dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_9"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bt6"
        app:layout_constraintEnd_toStartOf="@+id/btMulti"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt8"
        app:layout_constraintTop_toBottomOf="@+id/btDelete" />

    <Button
        android:id="@+id/btMulti"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_multi"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt9"
        app:layout_constraintTop_toBottomOf="@+id/btDivision" />

    <Button
        android:id="@+id/btEqual"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_equal"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btperiod"
        app:layout_constraintTop_toBottomOf="@+id/btPlus"
        app:layout_constraintHorizontal_bias="0.5"/>


    <Button
        android:id="@+id/btperiod"
        android:layout_width="0dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="ButtonClickListener"
        android:text="@string/bt_period"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btEqual"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@+id/bt00"
        app:layout_constraintTop_toBottomOf="@+id/bt3" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="right|bottom"
        android:text="0"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <TextView
        android:id="@+id/tvSub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="right|bottom"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>